[package]
name = "mqttdig"
version = "0.1.0"
authors = ["j-keck <jhyphenkeck@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
rumqtt = "0.31.0"
paw = "1.0.0"
structopt = { version = "0.3.4", features = [ "paw" ] }
structopt-derive = "0.3.4"
serde_json = "1.0.41"
humantime = "1.3.0"
tide = "0.4.0"
serde = { version = "1.0.102", features = [ "derive" ] }
http-service = "0.3.1"
mime_guess = "2.0.1"
async-std = "1.2.0"
tungstenite = "0.9.2"
bus = "2.2.2"
